// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OverviewSidebar contains SuggestedQueries when dependencies are present 1`] = `

<div class="px-4 py-3">
  <gui-suggested-queries>
  </gui-suggested-queries>
</div>

`;

exports[`OverviewSidebar renders with a parent 1`] = `

<div class="flex w-full flex-col">
  <div class="border-background-secondary flex h-12 w-full items-center border-b px-6 py-3">
    <h3 class="text-sm font-medium">
      Parent
    </h3>
  </div>
  <div class="flex w-full px-4 py-3">
    <gui-side-item
      parent="true"
      item="[object Object]"
      highlight="false"
      classname="w-full"
    >
    </gui-side-item>
  </div>
</div>

`;

exports[`OverviewSidebar renders with a parent and workspaces 1`] = `

<div class="flex w-full flex-col">
  <div class="border-background-secondary flex h-12 w-full items-center border-b px-6 py-3">
    <h3 class="text-sm font-medium">
      Parent
    </h3>
  </div>
  <div class="flex w-full px-4 py-3">
    <gui-side-item
      parent="true"
      item="[object Object]"
      highlight="false"
      classname="w-full"
    >
    </gui-side-item>
  </div>
</div>
<div class="flex w-full flex-col">
  <div class="border-background-secondary flex h-12 w-full items-center border-b px-6 py-3">
    <h3 class="text-sm font-medium">
      Workspaces
    </h3>
  </div>
  <div class="flex w-full px-4 py-3">
    <div class="flex w-full flex-col gap-4">
      <gui-side-item
        item="[object Object]"
        isworkspace="true"
        dependencies="false"
        classname="w-full"
      >
      </gui-side-item>
      <gui-side-item
        item="[object Object]"
        isworkspace="true"
        dependencies="false"
        classname="w-full"
      >
      </gui-side-item>
    </div>
  </div>
</div>

`;

exports[`OverviewSidebar renders with a parent, workspaces, and dependents 1`] = `

<div class="flex w-full flex-col">
  <div class="border-background-secondary flex h-12 w-full items-center border-b px-6 py-3">
    <h3 class="text-sm font-medium">
      Parent
    </h3>
  </div>
  <div class="flex w-full px-4 py-3">
    <gui-side-item
      parent="true"
      item="[object Object]"
      highlight="false"
      classname="w-full"
    >
    </gui-side-item>
  </div>
</div>
<div class="flex w-full flex-col">
  <div class="border-background-secondary flex h-12 w-full items-center border-b px-6 py-3">
    <h3 class="text-sm font-medium">
      Workspaces
    </h3>
  </div>
  <div class="flex w-full px-4 py-3">
    <div class="flex w-full flex-col gap-4">
      <gui-side-item
        item="[object Object]"
        isworkspace="true"
        dependencies="false"
        classname="w-full"
      >
      </gui-side-item>
      <gui-side-item
        item="[object Object]"
        isworkspace="true"
        dependencies="false"
        classname="w-full"
      >
      </gui-side-item>
    </div>
  </div>
</div>
<div class="flex w-full flex-col">
  <div class="border-background-secondary flex h-12 w-full items-center border-b px-6 py-3">
    <h3 class="text-sm font-medium">
      Dependents
    </h3>
  </div>
  <div class="flex w-full px-4 py-3">
    <div class="flex w-full flex-col gap-4">
      <gui-side-item
        item="[object Object]"
        isworkspace="false"
        dependencies="false"
        classname="w-full"
      >
      </gui-side-item>
      <gui-side-item
        item="[object Object]"
        isworkspace="false"
        dependencies="false"
        classname="w-full"
      >
      </gui-side-item>
    </div>
  </div>
</div>

`;
